--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <include src="./partials/section-methods.html"></include>
     <include src="./partials/section-teacher.html"></include>
     <include src="./partials/section-we-guarantee.html"></include>
+    <include src="./partials/reviews.html"></include>
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
