--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,7 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-
-    <include src="./partials/page-header.html"></include>
-    <include src="./partials/section-methods.html"></include>
-    <include src="./partials/section-teacher.html"></include>
-    <include src="./partials/section-we-guarantee.html"></include>
-    <include src="./partials/footer.html"></include>
+    <include src="./partials/main-problems.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
